# NovelCraft-Pro

./: .env.example  .gitignore  README.md  pyproject.toml  使用说明书.md
.github/workflows/: ci.yml
backend/app/: main.py
backend/app/api/: bible.py  book.py  chapters.py  consultant.py  drafts.py  health.py  plans.py  productization.py  projects.py  router.py  style.py  volumes.py
backend/app/core/: config.py  dependencies.py  paths.py
backend/app/infra/: db.py  llm_gateway.py  (+1 more)
docs/: demo-workflow.md  project-handoff.md  release-checklist.md
docs/releases/: TEMPLATE.md  v0.11.0.md
examples/sample-project-package/: inventory.json  manifest.json
scripts/: dev.ps1  release_preflight.ps1  smoke.ps1
tests/: conftest.py
tests/integration/: test_bible_api.py  test_book_api.py  test_book_continuity_api.py  test_chapters_api.py  test_consultant_api.py  test_drafts_api.py  test_health_api.py  test_plans_api.py  test_productization_api.py  test_project_api.py  test_style_api.py  test_volumes_api.py
tests/unit/: test_bible_service.py  test_book_assembly_service.py  test_book_continuity_checks_service.py  test_chapter_assembly_service.py  test_check_rule_evaluators.py  test_checks_service.py  test_context_bundle_service.py  test_file_repository.py  test_memory_stub_service.py  test_planner_service.py  test_productization_services.py  test_release_hardening_assets.py  test_repair_service.py  test_retrieval_service.py  test_scene_draft_service.py  test_sqlite_repository.py  test_style_service.py  test_voice_constraint_builder.py  test_volume_assembly_service.py
(+86 files in other folders)
